# lite-raster

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  scene.yaml
.github/workflows/: cmake-multi-platform.yml
examples/: scene.yaml
include/: light.h  main.h  material.h  matrix.h  object.h  output.h  scene.h  screen.h  stb_image.h  texture.h  triangle.h  types.h  yaml_processor.h
include/triangle/: triangle.h  triangle3D.h
src/: main.cpp  matrix.cpp  object.cpp  output.cpp  scene.cpp  screen.cpp  texture.cpp  triangle.cpp  triangle3D.cpp  yaml_processor.cpp
